--- a/index.html
+++ b/index.html
@@ -41,22 +41,78 @@
 
   <main>
 
-    <section>
-      <img src="Assets/jake-melara-30679-unsplash.jpg" alt="Woman hiking in the forrest"/>
-      <h1>Retreat from the desk, return refreshed.</h1>
-    </section>
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <img src="Assets/jake-melara-30679-unsplash.jpg" alt="Woman hiking in the forrest"/>
+        <h1>Retreat from the desk, return refreshed.</h1>
+    
 
-    <aside>
-      <h3>Want to join the next retreat?</h3>
-      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-      <h3>Find out more</h3>
+        <aside class="form-description">
+        <h3>Want to join the next retreat?</h3>
+        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        <h3>Find out more</h3>
 
-      <div>
+        <div class="form">
         <input type="text" name="name" value="email address">
         <input type="button" value="Download Itinerary">
-      </div>
+        </div>
 
-    </aside>
+        </aside>
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="content-wrapper">
+        <img src="Assets/rawpixel-800820-unsplash1.jpg"> alt="coworkers having a meal together"/>
+        <h1>Have the work week you always dreamed of - without the bad wifi.</h1>
+        <div class="features-items">
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Located in a peaceful bungalow 
+              outside of Lake Geneva, Wisconsin.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 
+              2 group meeting rooms and 4 breakout rooms.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - 
+              just like your team kitchen.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach 
+              1/2 mile from bungalow.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities
+              so you all get a chance to reset.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+          </article>
+        </div>  
+      </div>
+    </section>  
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <article>
+          <h1>Be a better team in 5 days, like these.</h1>
+          <img src="Assets/omar-lopez-296944-unsplash.jpg" alt="coworkers posing together after their retreat"/>
+        </article>
+        <article>
+          <h3>LaCrue Bottling Co.<br>
+          October 2017</h3>
+          <p>lorem ipsum dolor sit amet, ...</p>
+        </article>
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -80,7 +136,6 @@
 
     <div class="copyright">
       <p>Copyright 2019 | Unplugged</p>
-
     </div>
   </footer>
 
