Page updated with html and text

--- a/about/index.html
+++ b/about/index.html
@@ -41,14 +41,49 @@
 
 <main>
 
-  <section>
+  <section class="mission">
+    <div class="content-wrapper">
+      <div class="mission-content">
+        <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla harum alias 
+             ex laudantium provident repellendus, debitis sunt illum deleniti iusto! Perferendis 
+             quos consectetur blanditiis consequuntur fugit earum pariatur. Nam, mollitia!
+          </p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus sequi et, 
+             saepe sapiente consectetur nisi delectus facere debitis tempora, aliquid voluptate! 
+             Sunt, harum maiores nemo ea architecto inventore similique repellendus!
+          </p>
+      </div>
+    </div>
+  </section>  
 
+  <section class="map">
+    <figure> 
+      <!--- insert iframe for google map --->
+    </figure>
   </section>
 
-  <aside>
-
-  </aside>
-</main>
+  <section class="contact-section">  
+    <div class="content-wrapper">
+      <div class="contact">
+        <h1>Contact us, because you all need this.</h1>
+        <h3>General Information</h3>
+          <address>
+           <p>333 Main St, Lake Geneva, WI 53147 <br>
+           555-555-5555 <br>
+           hello@unplugged.com
+            </p>
+          </address>
+      </div>    
+      <div class="contact">    
+        <h3>Chat with a Facilitator</h3>
+          <address>
+           <p>555-555-5555 <br>
+           facilitator@unplugged.com
+           </p>
+          </address>
+      </div>   
+    </div>
+  </section>  
 
 <footer>
   <div class="content-wrapper">
