--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="header-divider"></div>
         <nav>
           <ul>
-            <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-            <li><a href="about/index.html" target="_blank">About</a></li>
+            <li><a href="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/faq/index.html" target="_blank">FAQ</a></li>
+            <li><a href="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/about/index.html" target="_blank">About</a></li>
           </ul>
         </nav>
       </div>
@@ -109,7 +109,10 @@
         <article>
           <h3>LaCrue Bottling Co.<br>
           October 2017</h3>
-          <p>lorem ipsum dolor sit amet, ...</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni facilis voluptatum sequi, doloribus quas, 
+            rerum id nemo quo, suscipit aliquam odio explicabo incidunt. Delectus animi dolorum earum officiis perspiciatis. 
+            Explicabo?
+          </p>  
         </article>
       </div>
     </section>
