Updated for tablet media query

--- a/about/index.html
+++ b/about/index.html
@@ -43,16 +43,17 @@
 
   <section class="mission">
     <div class="content-wrapper">
-      <div class="mission-content">
-        <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
+      <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
+        <div class="mission-content">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla harum alias 
              ex laudantium provident repellendus, debitis sunt illum deleniti iusto! Perferendis 
              quos consectetur blanditiis consequuntur fugit earum pariatur. Nam, mollitia!
-          </p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus sequi et, 
+          </p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus sequi et, 
              saepe sapiente consectetur nisi delectus facere debitis tempora, aliquid voluptate! 
              Sunt, harum maiores nemo ea architecto inventore similique repellendus!
           </p>
-      </div>
+        </div>
     </div>
   </section>  
 
@@ -62,10 +63,10 @@
     </figure>
   </section>
 
-  <section class="contact-section">  
+  <section class="about-contact-section">  
+    <h1>Contact us, because you all need this.</h1>
     <div class="content-wrapper">
-      <div class="contact">
-        <h1>Contact us, because you all need this.</h1>
+      <div class="contact-general">
         <h3>General Information</h3>
           <address>
            <p>333 Main St, Lake Geneva, WI 53147 <br>
@@ -74,7 +75,7 @@
             </p>
           </address>
       </div>    
-      <div class="contact">    
+      <div class="contact-chat">    
         <h3>Chat with a Facilitator</h3>
           <address>
            <p>555-555-5555 <br>
