--- a/faq/index.html
+++ b/faq/index.html
@@ -41,39 +41,42 @@
 
 <main>
 
-  <section class="main-section">
-    <div class="content-wrapper">
+  <section class="faq-main-section">
+    <div class="faq-content-wrapper">
       <h1>Frequently Asked Questions</h1>
 
       <div class="question-section">
-        <h3>How do I get to the Unplugged retreat?</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Eos consectetur rem dicta cumque dolor ipsum voluptatibus debitis 
-        autem et repellendus qui, voluptas eum soluta, consequuntur doloremque 
-        libero sequi, porro recusandae.</p>
-      </div>
+        <article>
+          <h3>How do I get to the Unplugged retreat?</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Eos consectetur rem dicta cumque dolor ipsum voluptatibus debitis 
+          autem et repellendus qui, voluptas eum soluta, consequuntur doloremque 
+          libero sequi, porro recusandae.</p>
+        </article>  
 
-      <div class="question-section">
-        <h3>What kind of team is right for the Unplugged retreat?</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-         Explicabo libero nam accusantium eius officia amet eos sed consequuntur 
-         natus at placeat, officiis similique, architecto qui labore iste saepe. 
-         At, reiciendis?</p> 
-      </div>
+        <article>
+          <h3>What kind of team is right for the Unplugged retreat?</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Explicabo libero nam accusantium eius officia amet eos sed consequuntur 
+          natus at placeat, officiis similique, architecto qui labore iste saepe. 
+          At, reiciendis?</p> 
+        </article>
+     
 
-      <div class="question-section">
-        <h3>What size teams can you accomodate?</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo fugiat 
-          quaerat cumque illo repellat! Enim porro, voluptate esse velit mollitia 
-          perferendis dolorum, maxime unde aut nulla error, autem molestiae eligendi?
-          </p>
-      </div>
-
-      <div class="question-section">
-        <h3>Is there really no wifi available?</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam tempore 
-        exercitationem nesciunt harum. Non ad itaque laboriosam at explicabo eveniet 
-        eius repellendus adipisci. Earum nam beatae vel! Nam, ullam numquam.</p>
+        <article>
+          <h3>What size teams can you accomodate?</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo fugiat 
+            quaerat cumque illo repellat! Enim porro, voluptate esse velit mollitia 
+            perferendis dolorum, maxime unde aut nulla error, autem molestiae eligendi?
+            </p>
+        </article>    
+      
+        <article>
+          <h3>Is there really no wifi available?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam tempore 
+          exercitationem nesciunt harum. Non ad itaque laboriosam at explicabo eveniet 
+          eius repellendus adipisci. Earum nam beatae vel! Nam, ullam numquam.</p>
+        </article>
       </div>
     </div>
   </section>
