Updated all text for all media queries

--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,9 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -26,65 +29,72 @@
 
   <!-- Add your site or application content here -->
   <header>
-    <div class="content-wrapper">
-      <a href="#"><img src="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/Assets/unpluggedlogo.png" alt="unplugged logo"></a>
-      <div class="header-divider"></div>
-      <nav>
-        <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
-        </ul>
-      </nav>
-    </div>
-</header>
+    <section class ="navigation">
+      <div class="content-wrapper">
+        <a href="#"><img src="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/Assets/unpluggedlogo.png" alt="unplugged logo"></a>
+        <div class="header-divider"></div>
+        <nav>
+          <ul>
+            <li><a href="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/faq/index.html" target="_blank">FAQ</a></li>
+            <li><a href="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/about/index.html" target="_blank">About</a></li>
+          </ul>
+        </nav>
+      </div>
+    </section>
+  </header>
   
 
 <main>
-
-  <section class="mission">
-    <div class="content-wrapper">
-      <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
-        <div class="mission-content">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla harum alias 
+  <section class="about">
+    <section class="mission">
+      <div class="content-wrapper">
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+          <div class="mission-content">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla harum alias 
              ex laudantium provident repellendus, debitis sunt illum deleniti iusto! Perferendis 
              quos consectetur blanditiis consequuntur fugit earum pariatur. Nam, mollitia!
-          </p>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus sequi et, 
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus sequi et, 
              saepe sapiente consectetur nisi delectus facere debitis tempora, aliquid voluptate! 
              Sunt, harum maiores nemo ea architecto inventore similique repellendus!
-          </p>
-        </div>
-    </div>
-  </section>  
+            </p>
+          </div>
+      </div>
+    </section>    
 
-  <section class="map">
+    <section class="map">
     <figure> 
       <!--- insert iframe for google map --->
     </figure>
-  </section>
+    </section>
 
-  <section class="about-contact-section">  
-    <h1>Contact us, because you all need this.</h1>
-    <div class="content-wrapper">
-      <div class="contact-general">
-        <h3>General Information</h3>
-          <address>
-           <p>333 Main St, Lake Geneva, WI 53147 <br>
-           555-555-5555 <br>
-           hello@unplugged.com
+    <section class="about-contact-section">  
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+        <div class="about-contact">
+          <div class="contact-general">
+            <h3>General Information</h3>
+            <address>
+            <p>333 Main St, Lake Geneva, WI 53147 <br>
+            555-555-5555 <br>
+            hello@unplugged.com
             </p>
-          </address>
-      </div>    
-      <div class="contact-chat">    
-        <h3>Chat with a Facilitator</h3>
-          <address>
-           <p>555-555-5555 <br>
-           facilitator@unplugged.com
-           </p>
-          </address>
-      </div>   
-    </div>
+            </address>
+          </div>    
+          
+          <div class="contact-chat">    
+            <h3>Chat with a Facilitator</h3>
+            <address>
+             <p>555-555-5555 <br>
+            facilitator@unplugged.com
+            </p>
+            </address>
+          </div>   
+        </div>  
+      </div>
+    </section>  
   </section>  
+</main>
 
 <footer>
   <div class="content-wrapper">
@@ -95,7 +105,7 @@
           hello@unplugged.com</address>
       </div>
       <div class="social">
-        <h4>Social</h4>
+        <h3>Social</h3>
         <div class="social-icons">
           <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
           <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
