--- a/faq/index.html
+++ b/faq/index.html
@@ -19,6 +19,9 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -26,24 +29,25 @@
 
   <!-- Add your site or application content here -->
   <header>
-    <div class="content-wrapper">
-      <a href="#"><img src="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/Assets/unpluggedlogo.png" alt="unplugged logo"></a>
-      <div class="header-divider"></div>
-      <nav>
-        <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
-        </ul>
-      </nav>
-    </div>
-</header>
+    <section class ="navigation">
+      <div class="content-wrapper">
+        <a href="#"><img src="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/Assets/unpluggedlogo.png" alt="unplugged logo"></a>
+        <div class="header-divider"></div>
+        <nav>
+          <ul>
+            <li><a href="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/faq/index.html" target="_blank">FAQ</a></li>
+            <li><a href="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/about/index.html" target="_blank">About</a></li>
+          </ul>
+        </nav>
+      </div>
+    </section>
+  </header>
   
 
 <main>
-
   <section class="faq-main-section">
     <div class="faq-content-wrapper">
-      <h1>Frequently Asked Questions</h1>
+      <h2>Frequently Asked Questions</h2>
 
       <div class="question-section">
         <article>
@@ -95,7 +99,7 @@
           hello@unplugged.com</address>
       </div>
       <div class="social">
-        <h4>Social</h4>
+        <h3>Social</h3>
         <div class="social-icons">
           <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
           <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
