--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -28,7 +31,7 @@
   <header>
     <section class ="navigation">
       <div class="content-wrapper">
-        a href="#"><img src="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/Assets/unpluggedlogo.png" alt="unplugged logo"></a>
+        <a href="#"><img src="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/Assets/unpluggedlogo.png" alt="unplugged logo"></a>
         <div class="header-divider"></div>
         <nav>
           <ul>
@@ -113,7 +116,7 @@
     <section class="previous-retreats"> <!-----REVIEWS----->
       <div class="content-wrapper">
         <article>
-          <h1>Be a better team in 5 days, like these.</h1>
+          <h2>Be a better team in 5 days, like these.</h2>
           <!---<img src="Assets/omar-lopez-296944-unsplash.jpg" alt="coworkers posing together after their retreat"/>--->
         </article>
         <article class="review">
@@ -138,7 +141,7 @@
             hello@unplugged.com</address>
         </div>
         <div class="social">
-          <h4>Social</h4>
+          <h3>Social</h3>
           <div class="social-icons">
             <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
             <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
