--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,8 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
-
+  <!--Icons-->
+  <script src="https://kit.fontawesome.com/281df38f00.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -108,9 +109,12 @@
       <div class="social">
         <h3>Social</h3>
         <div class="social-icons">
-          <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-          <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
-          <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a><i class="fab fa-facebook-f"></i>
+            </p>
+            <p><a href="https://www.twitter.com/yoursite" target="_blank"></a><i class="fab fa-twitter"></i>
+            </p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank"></a><i class="fab fa-instagram"></i>
         </div>
       </div>
     </div>
