Almost ready to ship

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     
 
   <main>
-    <div class="hero-area">      
-      <!---<section class="header-image"> -unneccessary section-->
+    <div class="hero-area">     
+      <section class="header-image"> <!-- added for proper positioning of bg image-->
         <div class="content-wrapper">
           <h1>Retreat from the desk, return refreshed.</h1>
         </div> 
-  
+      </section>  
       <!--<section class="form"> unneccessary section, move aside above div class-->
         
           <aside> <!-----ITINTERARY DOWNLOAD INPUT-->
@@ -126,7 +126,7 @@
 
     <section class="previous-retreats"> <!-----REVIEWS----->
       <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like these.</h2>
+        <h2>Be a better team in 5 days, like this one.</h2>
         <article>
           <figure>
             <img src="Assets/omar-lopez-296944-unsplash.jpg" alt="coworkers posing together after their retreat"/>
