--- a/about/index.html
+++ b/about/index.html
@@ -30,9 +30,13 @@
 
   <!-- Add your site or application content here -->
   <header>
-    <section class ="navigation">
+    <section class ="navigation"> <!--not part of solution. done to differentiate measurements from content wrapper as a whole-->
       <div class="content-wrapper">
-        <a href="#"><img src="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/Assets/unpluggedlogo.png" alt="unplugged logo"></a>
+        <figure>
+          <a href="#">
+            <img src="/Users/laurennicotera/SKILLCRUSH/unplugged-retreat/img/unpluggedlogo.png" alt="unplugged logo"></a>
+          </figure>
+              
         <div class="header-divider"></div>
         <nav>
           <ul>
@@ -109,12 +113,12 @@
       <div class="social">
         <h3>Social</h3>
         <div class="social-icons">
-          <div class="social-icons">
-            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a><i class="fab fa-facebook-f"></i>
-            </p>
-            <p><a href="https://www.twitter.com/yoursite" target="_blank"></a><i class="fab fa-twitter"></i>
-            </p>
-            <p><a href="https://www.instagram.com/yoursite" target="_blank"></a><i class="fab fa-instagram"></i>
+          <p><a href="https://www.facebook.com/yoursite" target="_blank"></a><i class="fab fa-facebook-f"></i>
+          </p>
+          <p><a href="https://www.twitter.com/yoursite" target="_blank"></a><i class="fab fa-twitter"></i>
+          </p>
+          <p><a href="https://www.instagram.com/yoursite" target="_blank"></a><i class="fab fa-instagram"></i>
+          </p>
         </div>
       </div>
     </div>
@@ -122,6 +126,8 @@
 
   <div class="copyright">
     <p>Copyright 2019 | Unplugged</p>
+  </div>
+</footer>
 
   </div>
 </footer>
