Photo link update and final css before ship

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
           <figure>
-            <img src="Assets/omar-lopez-296944-unsplash.jpg" alt="coworkers posing together after their retreat"/>
+            <img src="img/review-image.jpg" alt="coworkers posing together after their retreat"/>
           </figure>
           <div class="review">
             <h3>LaCrue Bottling Co.<br>
